--- a/static/css/login.css
+++ b/static/css/login.css
@@ -13,7 +13,7 @@ body {
   right: 0;
   width: 50%;
   height: 100%;
-  background: #3498db url(../img/patients2.jpg);
+  background: url(../img/doctor_background4.jpg);
   background-size: cover;
   background-position: 50% 50%;
 }
@@ -23,7 +23,7 @@ body {
   left: 0;
   width: 50%;
   height: 100%;
-  background: #e74c3c url(../img/patients1.jpg);
+  background: url(../img/doctor_background3.jpg);
   background-size: cover;
   background-position: 50% 50%;
 }
@@ -66,7 +66,6 @@ body {
   background: #f9f9f9;
   right: 0;
   position: absolute;
-  
 }
 
 .content {
@@ -137,7 +136,6 @@ input {
   width: 400px;
   /*margin: 16px auto;*/
   font-size: 16px;
-  /* height: 500px; */
 }
 
 /* Reset top and bottom margins from certain elements */
@@ -169,15 +167,6 @@ input {
 .login-container {
   background: #ebebeb;
   padding: 12px;
-  cursor: pointer;
-  height: 450px;
-  
-  overflow-y:auto
-}
-
-.login-container-bottom{
-  font: bold;
- 
 }
 
 /* Every row inside .login-container is defined with p tags */
@@ -225,25 +214,5 @@ input {
 .login input[type="submit"]:focus {
   border-color: #05a;
 }
-.signup-message p {
-            margin: 0; /* Remove default margin */
-            margin-top: 8px;
-            text-align: center;
-            color: #9f5757;
-}
-.signup-message p:hover{
-  font-size: 15px;
-}
-.signup-button {
-            background-color: #007bff; /* Button background color */
-            color: white; /* Button text color */
-            border: none; /* No border for button */
-            padding: 5px 10px; /* Padding inside button */
-            border-radius: 5px; /* Rounded corners for button */
-            cursor: pointer; /* Pointer cursor on hover */
-            transition: background-color 0.3s; /* Transition for hover effect */
-}
-.signup-button:hover {
-            background-color: #0056b3; /* Darker blue on hover */
-}
+
 .scrollable-form{height:400px;overflow-y:auto}
