--- a/templates/doctorlogin.html
+++ b/templates/doctorlogin.html
@@ -65,18 +65,20 @@
               <p><input type="text" name="available_days" placeholder="Available Days (e.g., Mon, Tue, Wed)"></p>
               <p><input type="text" name="available_times" placeholder="Available Times (e.g., 9 AM - 5 PM)"></p>
               <p><input type="text" name="fees" placeholder="Consultation Fees"></p>
-              
+              <p><input type="submit" value="Sign Up"></p>
           </form>
-          <p><input type="submit" value="Sign Up"></p>
         </div>
-       <div style="text-align: center; margin: 5px;width: 400px;">
+        <div class="signup-message">
+          <p>Don't have an account? <span><button id="goLeft" class="signup-button">Login</button></span></p>
+      </div>
+       <!-- <div style="text-align: center; margin: 5px;width: 400px;">
         <span style="color: aliceblue; font-size: 16px; display: block; margin-bottom: 10px;">
           Already have an account?
         </span>
         <button id="goLeft" class="on" style="padding: 10px 15px; background-color: #007BFF; border: none; border-radius: 5px; cursor: pointer; color: white; transition: background-color 0.3s;">
           <span>Login</span>
         </button>
-      </div>
+      </div> -->
 
 
         <!-- <button id="goLeft" class="on" style="margin-top:10px; margin-bottom: 10px; color:white">Login</button> -->
